# pshell

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  smoke_test.py
.github/workflows/: docs.yml  lint.yml  pytest-minimal.yml  pytest.yml  wheels.yml
ci/: .coveragerc  requirements-conda-forge.yml  requirements-docs.yml  requirements-flake8.yml  requirements-latest.yml  requirements-minimal.yml  requirements-py35.yml  requirements-py36-windows.yml  requirements-py36.yml  requirements-py37.yml  requirements-py38.yml  requirements-windows.yml
doc/: Makefile  conf.py  develop.rst  environment.yml  index.rst  installing.rst  requirements.txt  requirements.yml  whats-new.rst
doc/api/: call.rst  env.rst  file.rst  helloworld.rst  log.rst  manipulate.rst  open.rst  procs.rst  search.rst
pshell/: __init__.py  call.py  env.py  file.py  log.py  manipulate.py  open.py  procs.py  search.py
pshell/tests/: __init__.py  conftest.py  test_call.py  test_env.py  test_file.py  test_log.py  test_manipulate.py  test_open.py  test_procs.py  test_pshell.py  test_search.py
pshell/tests/data/: sleep20.bat  sleep20.py  sleep20.sh  sleep20_sigterm_delay5.py  sleep20_sigterm_ignore.py  source.sh  test_proc.bat  test_proc.sh
