[metadata]
name = pshell
author = TODO
author_email = TODO@TODO.com
license = Apache
description = TODO
long_description_content_type=x-rst
long_description = TODO
keywords = TODO, TODO
url = https://github.com/crusaderky/pshell
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: System Shells

[options]
packages = pshell
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    setuptools  # For pkg_resources
    psutil >= 5.0
setup_requires = setuptools_scm

[options.package_data]
pshell =
    py.typed
    tests/data/*

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
addopts = --strict
python_files = test_*.py
testpaths = pshell/tests

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude =
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = pshell
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

# mypy: Ignore non-typed libraries
# TODO add any other library for which mypy returns 'No library stub'
[mypy-psutil]
ignore_missing_imports = True
[mypy-pytest]
ignore_missing_imports = True
[mypy-setuptools]
ignore_missing_imports = True
